objects/Mme_Private_Lesson__c.object
<CustomObject><fields>
        <fullName>Cost__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>automatically calculated cost based on 1) private lesson type;  2) how many kids took the lesson</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Emily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emily is taking the lesson today</description>
        <inlineHelpText>Check if Emily is taking the lesson today</inlineHelpText>
        <label>Emily</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>LessonDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>date lesson taken</description>
        <inlineHelpText>Date the lesson is taken</inlineHelpText>
        <label>Lesson Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Maxwell__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if Maxwell takes lesson</description>
        <inlineHelpText>Check if Maxwell takes lesson</inlineHelpText>
        <label>Maxwell</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Michael__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Michael takes the music lesson</description>
        <inlineHelpText>Check if Michael takes the music lesson</inlineHelpText>
        <label>Michael</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Private_Lesson__c</fullName>
        <description>private lesson type</description>
        <inlineHelpText>click to select one</inlineHelpText>
        <label>Private Lesson</label>
        <picklist>
            <picklistValues>
                <fullName>Tennis</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>LessonDateCost_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Record of private lessons, 
    aka, tennis, music, etc.
 for Maxwell, Michael and later Cici.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Mme Private Lesson</label><nameField>
        <displayFormat>Mme_{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Mme Private Lesson ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Mme_Private_Lessons</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Mme_must_take_the_lesson</fullName>
        <active>true</active>
        <description>one of M m e must be checked as taking the lessons</description>
        <errorConditionFormula>NOT(Maxwell__c || Michael__c || Emily__c)</errorConditionFormula>
        <errorDisplayField>Maxwell__c</errorDisplayField>
        <errorMessage>Must check one: Maxwell, Michael or Cici</errorMessage>
    </validationRules></CustomObject>